# nextui-wiki

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: build_publish.yml
_inc/css/: custom.css
configure/installing-paks/: index.html
configure/theming/: index.html
configure/updating/: index.html
docs/: CNAME  index.md
docs/_inc/css/: custom.css
docs/configure/: installing-paks.md  theming.md  updating.md
docs/faq/: index.md
docs/getting-started/: bios.md  index.md  installation.md  roms.md
docs/support/: faq.md  index.md
docs/use/: index.md  updating.md
getting-started/: index.html
getting-started/bios/: index.html
getting-started/installation/: index.html
getting-started/roms/: index.html
search/: search_index.json
support/: index.html
support/faq/: index.html
support/troubleshooting/: index.html
