[project]
name = "nextui-wiki"
version = "0.1.0"
description = "Powerful but understated CFW for TrimUI Brick and Smart Pro"
authors = [
    {name = "Brandon T. Kowalski",email = "brandon@kowalski.io"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs-material (>=9.6.11,<10.0.0)",
    "mkdocs-minify-plugin (>=0.8.0,<0.9.0)",
    "mkdocs-macros-plugin (>=1.3.7,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

